--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                               
                                             </li>
                                             <li><a href="#about">About</a></li>
-                                            <li><a href="#discord">Discord</a></li>
+                                            <li><a href="https://discord.gg/duelistsunite">Discord</a></li>
                                         </ul>
                                         <div class="logo">
                                             <a href="index-3.html"><img src="img/logo/h3_logo.png" alt="Logo"></a>
